Fix z-index for header

--- a/docroot/themes/custom/shops/style/scss/components/_dropdowns.scss
+++ b/docroot/themes/custom/shops/style/scss/components/_dropdowns.scss
@@ -7,7 +7,7 @@
   @extend .pl-lg-0;
 
   .wrapper {
-    z-index: 500;
+    z-index: 550;
     right: 0;
 
     @extend .bg-white;
